--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "postman-newman-api-test",
   "version": "1.0.0",
@@ -7,9 +6,11 @@
     "test:api": "node tests/newman-runner.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "newman-reporter-html": "^1.0.5"
   },
   "devDependencies": {
-    "newman": "^6.1.0"
+    "newman": "^6.2.1",
+    "newman-reporter-allure": "^3.3.2"
   }
 }
